--- a/templates/admin_menu.html
+++ b/templates/admin_menu.html
@@ -32,13 +32,13 @@
         {% endif %}
     {% endblock content %}
 
-    <button onclick="document.location.href='/admin_read_product'">Смотреть список продуктов</button>
-    <button onclick="document.location.href='/admin_read_dish'">Смотреть список блюд</button>
+    <button onclick="document.location.href='/admin/products'">Смотреть список продуктов</button>
+    <button onclick="document.location.href='/admin/dishes'">Смотреть список блюд</button>
 
-    <button onclick="document.location.href='/admin_requisition'">Согласование заявок</button>
-    <button onclick="document.location.href='/add_user'">Добавить пользователя</button>
-    <button onclick="document.location.href='/read_users'">Смотреть список пользователей</button>
-    <button onclick="document.location.href='/exit'">Выйти</button>
+    <button onclick="document.location.href='/admin/requisitions'">Согласование заявок</button>
+    <button onclick="document.location.href='/admin/user/add'">Добавить пользователя</button>
+    <button onclick="document.location.href='/admin/users'">Смотреть список пользователей</button>
+    <button onclick="document.location.href='/logout'">Выйти</button>
 
 </body>
 </html>
