--- a/templates/admin_read_product.html
+++ b/templates/admin_read_product.html
@@ -21,6 +21,6 @@
 
     {% endblock content%}
 
-    <button onclick="document.location.href='/admin_menu'">Назад</button>
+    <button onclick="document.location.href='/admin/menu'">Назад</button>
 </body>
 </html>
