--- a/templates/admin_requisition.html
+++ b/templates/admin_requisition.html
@@ -81,7 +81,7 @@
         <div>Заявок нет</div>
     {% endif %}
 
-    <button onclick="document.location.href='/admin_menu'">Назад</button>
+    <button onclick="document.location.href='/admin/menu'">Назад</button>
 
     {% endblock %}
 </body>
