--- a/templates/edit_abonement.html
+++ b/templates/edit_abonement.html
@@ -7,7 +7,7 @@
     Баланс: {{ balance }}
     <br><br>
 
-    <form method="POST" action="/edit_aboniment">
+    <form method="POST" action="/abonement/edit">
         Выбор даты:
         <input type="date"
                name="date"
@@ -19,6 +19,6 @@
     </form>
 
     <br>
-    <a href="/food_payment">Назад</a>
+    <a href="/payment">Назад</a>
 </body>
 </html>
