--- a/templates/food_payment.html
+++ b/templates/food_payment.html
@@ -6,10 +6,10 @@
 <body>
     Ваш баланс: {{ balance }}
     <br><br>
-    <a href="/edit_balance">Пополнить баланс</a>
+    <a href="/balance/edit">Пополнить баланс</a>
     <br><br>
-    <a href="/edit_aboniment">Оформить абонемент</a>
+    <a href="/abonement/edit">Оформить абонемент</a>
     <br><br>
-    <a href="/main">Назад</a>
+    <a href="/menu">Назад</a>
 </body>
 </html>
