--- a/templates/menu_page.html
+++ b/templates/menu_page.html
@@ -29,6 +29,6 @@
         <div>Меню нет</div>
     {% endif %}
 
-    <button onclick="document.location.href='/main'">Назад</button>
+    <button onclick="document.location.href='/menu'">Назад</button>
 </body>
 </html>
