--- a/templates/profile-popup.html
+++ b/templates/profile-popup.html
@@ -9,7 +9,7 @@
         </li>
 
         <li>
-            <a href='/exit'>Выйти</a>
+            <a href='/logout'>Выйти</a>
         </li>
     </ul>
 </div>
