--- a/templates/read_requisition.html
+++ b/templates/read_requisition.html
@@ -62,7 +62,7 @@
         <div>Заявок нет</div>
     {% endif %}
 
-    <button onclick="document.location.href='/cook_menu'">Назад</button>
+    <button onclick="document.location.href='/cook/menu'">Назад</button>
 
     {% endblock %}
 </body>
