--- a/templates/reviews_main.html
+++ b/templates/reviews_main.html
@@ -22,7 +22,7 @@
         <p>У вас еще нет отзывов.</p>
     {% endif %}
 
-    <a href="/reviews/new">Написать новый отзыв</a>
+    <a href="/reviews/add">Написать новый отзыв</a>
     <a href="/">Назад к главной</a>
 </body>
 </html>
