--- a/templates/admin_read_dish.html
+++ b/templates/admin_read_dish.html
@@ -126,6 +126,6 @@
 
     {% endblock content %}
 
-    <button onclick="document.location.href='/admin_menu'">Назад</button>
+    <button onclick="document.location.href='/admin/menu'">Назад</button>
 </body>
 </html>
