--- a/templates/cook_menu.html
+++ b/templates/cook_menu.html
@@ -32,14 +32,14 @@
         {% endif %}
     {% endblock content %}
 
-    <button onclick="document.location.href='/add_product'">Добавить продукт</button>
-    <button onclick="document.location.href='/read_product'">Смотреть список продуктов</button>
-    <button onclick="document.location.href='/add_dish'">Создать блюдо</button>
-    <button onclick="document.location.href='/read_dish'">Смотреть список блюд</button>
-    <button onclick="document.location.href='/add_menu'">Создать меню</button>
-    <button onclick="document.location.href='/cook_requisition'">Подать заявку на закупку продуктов</button>
-    <button onclick="document.location.href='/read_requisition'">Смотреть заявки на закупку продуктов</button>
+    <button onclick="document.location.href='/cook/product/add'">Добавить продукт</button>
+    <button onclick="document.location.href='/cook/products'">Смотреть список продуктов</button>
+    <button onclick="document.location.href='/cook/dish/add'">Создать блюдо</button>
+    <button onclick="document.location.href='/cook/dishes'">Смотреть список блюд</button>
+    <button onclick="document.location.href='/cook/menu/add'">Создать меню</button>
+    <button onclick="document.location.href='/cook/requisition/add'">Подать заявку на закупку продуктов</button>
+    <button onclick="document.location.href='/cook/requisitions'">Смотреть заявки на закупку продуктов</button>
 
-    <button onclick="document.location.href='/exit'">Выйти</button>
+    <button onclick="document.location.href='/logout'">Выйти</button>
 </body>
 </html>
