--- a/templates/edit_balance.html
+++ b/templates/edit_balance.html
@@ -4,7 +4,7 @@
     <title>Пополнение баланса</title>
 </head>
 <body>
-    <form method="POST" action="/edit_balance">
+    <form method="POST" action="/balance/edit">
         Введите сумму: <input type="number" name="balance_edit" required>
         <br><br>
         <button type="submit">Оплатить</button>
