--- a/templates/read_product.html
+++ b/templates/read_product.html
@@ -14,8 +14,8 @@
                 <div>{{ product.name }}</div>
                 <div>{{ product.amount }}</div>
                 <div>{{ product.measurement }}</div>
-                <button onclick="document.location.href='/{{ product.id }}/edit_product'">Изменить продукт</button>
-                <button onclick="document.location.href='/{{ product.id }}/delete_product'">Удалить продукт</button>
+                <button onclick="document.location.href='/cook/product/{{ product.id }}/edit'">Изменить продукт</button>
+                <button onclick="document.location.href='/cook/product/{{ product.id }}/del'">Удалить продукт</button>
             {% endfor %}
         {% else %}
             <div>Продуктов нет</div>
@@ -23,7 +23,7 @@
 
     {% endblock content%}
 
-    <button onclick="document.location.href='/add_product'">Добавить продукт</button>
-    <button onclick="document.location.href='/cook_menu'">Назад</button>
+    <button onclick="document.location.href='/cook/product/add'">Добавить продукт</button>
+    <button onclick="document.location.href='/cook/menu'">Назад</button>
 </body>
 </html>
