--- a/templates/admin_menu.html
+++ b/templates/admin_menu.html
@@ -1,39 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    {% block title %}Список меню{% endblock title %}
+{% extends 'base.html' %}
 
-    {% block content %}
-        {% for menu in menus %}
-            <div>{{ menu.date }}</div>
-            <div>{{ menu.type }}</div>
-            {% for dish in menu.dishes %}
-                <div>{{ dish.name }}</div>
-                {% if dish.products %}
-                    <div>Состав:</div>
-                    {% for product in dish.products %}
-                        {{ product.name }}
-                    {% endfor %}
-                {% else %}
-                     <div>Состав не известен</div>
-                {% endif %}
-            {% endfor %}
-            <div>{{ menu.price }}</div>
+{% block title %}Список меню{% endblock title %}
+
+{% block content %}
+    {% for menu in menus %}
+        <div>{{ menu.date }}</div>
+        <div>{{ menu.type }}</div>
+        {% for dish in menu.dishes %}
+            <div>{{ dish.name }}</div>
+            {% if dish.products %}
+                <div>Состав:</div>
+                {% for product in dish.products %}
+                    {{ product.name }}
+                {% endfor %}
+            {% else %}
+                    <div>Состав не известен</div>
+            {% endif %}
         {% endfor %}
-    {% endblock content %}
-
-    <button onclick="document.location.href='/add_menu'">Создать меню</button>
-    <button onclick="document.location.href='/admin_read_dish'">Смотреть список блюд</button>
-    <button onclick="document.location.href='/admin_read_product'">Смотреть список продуктов</button>
-
-    <button onclick="document.location.href='/admin_requisition'">Согласование заявок</button>
-    <button onclick="document.location.href='/add_user'">Добавить пользователя</button>
-    <button onclick="document.location.href='/read_users'">Смотреть список пользователей</button>
-    <button onclick="document.location.href='/exit'">Выйти</button>
-
-</body>
-</html>
+        <div>{{ menu.price }}</div>
+    {% endfor %}
+{% endblock content %}
