--- a/templates/layouts/sidebar_w_header.html
+++ b/templates/layouts/sidebar_w_header.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'layouts/base.html' %}
 
 {% block head %}
     <link rel="stylesheet" href="/static/styles/grid_w_sidebar_layout.css">
