--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -20,23 +20,22 @@
 </head>
 <body>
     <div class="layout-wrapper">
-        {% include 'header.html' %}
+        {% include 'includes/header.html' %}
         {% block content %}
         
         {% endblock %}
     </div>
 
-    {% if not is_not_authenticated %}
-    <script>
-        const popup = document.getElementById('profile-popup');
-        const profile_btn = document.getElementById('profile-btn');
-        profile_btn.addEventListener('click', togglePopupProfile);
+    {% if current_user.is_authenticated %}
+        <script>
+            const popup = document.getElementById('profile-popup');
+            const profile_btn = document.getElementById('profile-btn');
+            profile_btn.addEventListener('click', togglePopupProfile);
 
-        function togglePopupProfile() {
-            popup.classList.toggle('active');
-        }
-        
-    </script>
+            function togglePopupProfile() {
+                popup.classList.toggle('active');
+            }
+        </script>
     {% endif %}
 
 
