--- a/templates/menus/manage_menu.html
+++ b/templates/menus/manage_menu.html
@@ -1,9 +1,7 @@
-{% extends 'management/menus/menu_base.html' %}
-
-{% from 'macros/tiles/dish_tile.html' import dish_tile %}
+{% extends 'layouts/management/menus.html' %}
 
 
-{% block title %}{% endblock %}
+{% block title %}{{ menu.type }}{% endblock %}
 
 
 {% block head %}
@@ -47,7 +45,7 @@
 
         <section id="editingSection" class="menu__editing" style="display: none;">
             <h3 class="dishes__header">Изменение...</h3>
-            {% include 'management/menus/menu_form.html' %}
+            {% include 'includes/menus/menu_form.html' %}
         </section>
 
 
@@ -56,7 +54,7 @@
                 <h3 class="dishes__header">Блюда</h3>
                 <div class="dishes__grid">
                     {% for dish in menu.dishes %}
-                        {{ dish_tile(dish) }}
+                        {% include 'includes/dishes/dish_tile.html' %}
                     {% endfor %}
                 </div>
             </section>
@@ -106,7 +104,5 @@
             editingSection.style.display = 'none';
             menuInfo.style.display = 'block';
         });
-
-
     </script>
 {% endblock %}
