--- a/templates/menus/menu.html
+++ b/templates/menus/menu.html
@@ -1,7 +1,6 @@
-{% extends 'grid_w_sidebar_layout.html' %}
+{% extends 'layouts/sidebar_w_topbar.html' %}
 
 {% from 'macros/sidebar.html' import sidebar %}
-{% from 'macros/title.html' import title %}
 {% from 'macros/tiles/dish_tile.html' import dish_tile %}
 
 {% block title %}Меню{% endblock %}
@@ -19,7 +18,7 @@
     <form id="filtersForm" style="display: none;"></form>
 
     <div class="top-bar__left">
-        {{ title(text='Меню', alignment='left') }}
+        <h1 class="title left">Меню</h1>
         <p class="price">{{ menu.price }}₽</p>
 
     </div>
@@ -28,14 +27,14 @@
         <div class="filters">
             <select name="type" id="menuTypeSelect" class="menu-type" form="filtersForm">
                 {% if menu.type == "breakfast" %}
-                <option value="breakfast" selected>Завтрак</option>
-                <option value="lunch">Обед</option>
+                    <option value="breakfast" selected>Завтрак</option>
+                    <option value="lunch">Обед</option>
                 {% elif menu.type == "lunch" %}
-                <option value="breakfast">Завтрак</option>
-                <option value="lunch" selected>Обед</option>
+                    <option value="breakfast">Завтрак</option>
+                    <option value="lunch" selected>Обед</option>
                 {% else %}
-                <option value="breakfast">Завтрак</option>
-                <option value="lunch">Обед</option>
+                    <option value="breakfast">Завтрак</option>
+                    <option value="lunch">Обед</option>
                 {% endif %}
             </select>
         </div>
@@ -74,7 +73,7 @@
         
     <div class="menu-grid">
         {% for dish in menu.dishes %}
-        {{ dish_tile(dish) }}
+            {{ dish_tile(dish) }}
         {% endfor %}
     </div>
 
