--- a/templates/users/adding.html
+++ b/templates/users/adding.html
@@ -1,7 +1,6 @@
-{% extends 'management/users/users_base.html' %}
+{% extends 'layouts/management/users.html' %}
 
-{% from 'macros/labeled_input.html' import labeled_input %}
-{% from 'macros/labeled_select.html' import labeled_select  %}
+{% from 'macros/labeled_fields.html' import labeled_input, labeled_select %}
 
 
 {% block title %}Добавить пользователя{% endblock %}
