--- a/templates/includes/profile_popup.html
+++ b/templates/includes/profile_popup.html
@@ -4,9 +4,11 @@
             <a href='/profile'>Профиль</a>
         </li>
 
+        {% if current_user.roles[0].name == 'user' %}
         <li>
             <a href='/reviews'>Отзывы</a>
         </li>
+        {% endif %}
 
         <li>
             <a href='/logout'>Выйти</a>
